--- a/html/exam/mobile_slide.css
+++ b/html/exam/mobile_slide.css
@@ -25,3 +25,31 @@ footer {
     height: 100px;
     background-color: blue;
 }
+
+aside {
+    position: fixed;
+    top: 0;
+    left: -80%;
+    background-color: #ffffff;
+    width: 80%;
+    height: 100%;
+    z-index: 11;
+    transition: all 1s;
+}
+aside.on {
+    left: 0;
+}
+
+#layer_dim {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 10;
+}
+
+.dn {
+    display: none;
+}
